# DeepLab_Caffe2

./: README.md  infer.py
customOP/AddRemovePadding/: CMakeLists.txt
customOP/AddRemovePadding/src/: add_remove_padding_op.cc  add_remove_padding_op.h
model/: GoogleDeepLabPredictNet.pb
